k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-app
  namespace: ai-sentiment
  labels:
    app: sentiment-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sentiment-app
  template:
    metadata:
      labels:
        app: sentiment-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: sentiment-app
        image: 321858344734.dkr.ecr.us-west-2.amazonaws.com/devops-ai-app:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 5000
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet: 
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet: 
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 20
