k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-svc
  namespace: ai-sentiment
  labels:
    app: sentiment-app
spec:
  type: LoadBalancer
  selector:
    app: sentiment-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
